Bug 1068997 - Implement keyboard shortcut for composition's 'Find and Replace' on Mac

--- a/sk/suite/chrome/common/help/shortcuts_mailnews.xhtml
+++ b/sk/suite/chrome/common/help/shortcuts_mailnews.xhtml
@@ -335,6 +335,12 @@
     <td>Ctrl+R</td>
   </tr>
   <tr>
+    <td>Hľadať a nahradiť</td>
+    <td>Ctrl+H</td>
+    <td>Cmd+Opt+F</td>
+    <td>Ctrl+H</td>
+  </tr>
+  <tr>
     <td>Odoslať správu teraz</td>
     <td>Ctrl+Enter</td>
     <td>Cmd+Return</td>
