--- a/sk/suite/chrome/common/help/shortcuts_composer.xhtml
+++ b/sk/suite/chrome/common/help/shortcuts_composer.xhtml
@@ -68,9 +68,9 @@
   </tr>
   <tr>
     <td>Hľadať a nahradiť</td>
-    <td>Ctrl+F</td>
-    <td>Cmd+F</td>
-    <td>Ctrl+F</td>
+    <td>Ctrl+H</td>
+    <td>Cmd+Opt+F</td>
+    <td>Ctrl+H</td>
   </tr>
   <tr>
     <td>Hľadať znova</td>
