updated url:s to shortcut help files

--- a/sv-SE/suite/chrome/common/help/customize_help.xhtml
+++ b/sv-SE/suite/chrome/common/help/customize_help.xhtml
@@ -349,7 +349,7 @@
   &brandShortName;-fönster kan du dra och släppa den med musen. När du drar
   fliken använder &brandShortName; en indikator för att visa vart fliken kommer att
   flyttas. Du kan även om så önskas använda
-  <a href="shortcuts-navigator.xhtml#tabbed_browsing_shortcuts">kortkommandon</a> 
+  <a href="shortcuts_navigator.xhtml#tabbed_browsing_shortcuts">kortkommandon</a> 
   för att flytta flikar inom ett fönster.</p>
 
 <p><strong>OBS!</strong> Kortkommandon fungerar inte när en textruta är 
