--- a/sv-SE/suite/chrome/common/help/shortcuts.xhtml
+++ b/sv-SE/suite/chrome/common/help/shortcuts.xhtml
@@ -26,9 +26,9 @@
     <li><a href="#general_mozilla_shortcuts">Generella kortkommandon i
       &brandShortName;</a></li>
     <li><a href="#help_window_shortcuts">Kortkommandon i Hjälp-fönstret</a></li>
-    <li><a href="shortcuts-navigator.xhtml">Kortkommandon i webbläsaren</a></li>
-    <li><a href="shortcuts-mailnews.xhtml">Kortkommandon i E-post &amp; Grupper</a></li>
-    <li><a href="shortcuts-composer.xhtml">Kortkommandon i Composer</a></li>
+    <li><a href="shortcuts_navigator.xhtml">Kortkommandon i webbläsaren</a></li>
+    <li><a href="shortcuts_mailnews.xhtml">Kortkommandon i E-post &amp; Grupper</a></li>
+    <li><a href="shortcuts_composer.xhtml">Kortkommandon i Composer</a></li>
   </ul>
 </div>
 
