Aurora, sorry for leaving you so long without a proper apostrophe

--- a/sq/toolkit/chrome/mozapps/help/welcome.xhtml
+++ b/sq/toolkit/chrome/mozapps/help/welcome.xhtml
@@ -55,9 +55,9 @@
 	<ul>
 	        <li>Për të shfaqur ose fshehur Anështyllën që gjendet në anën e majtë
 	        të Dritares së Ndihmës klikoni butonin Shfaq/Fshih Anështyllë.</li>
-		<li>Për t'u kthyer mbrapsht nëpër faqe që i keni vizituar më parë klikoni butonin Mbrapsht. 
+		<li>Për t’u kthyer mbrapsht nëpër faqe që i keni vizituar më parë klikoni butonin Mbrapsht. 
 		Ky punon njësoj si butoni Mbrapsht te dritarja kryesore e &brandShortName;-it.</li>
-		<li>Për t'u hedhur përpara nëpër faqe që i keni vizituar më parë klikoni butonin Përpara.
+		<li>Për t’u hedhur përpara nëpër faqe që i keni vizituar më parë klikoni butonin Përpara.
 		  Punon njësoj si butoni Përpara te dritarja kryesore e &brandShortName;.</li>
 		<li>Për të parë Qendrën e Ndihmës dhe Asistencës klikoni butonin Hyrje, i cili përfshin lidhje
 		  për te mundësi asistence dhe burime me bazë web.</li>
@@ -84,7 +84,7 @@
         	<li>Përpiquni që kërkimi juaj të jetë sa më përfshirës - mos jini tepër specifik; 
         	termat mund të jenë përdorur pakëz ndryshe nga kërkimi juaj.</li>
 		<li>Shmangni të qenët tepër i hapur në kërkimin tuaj: fjalë si &quot;&brandShortName;&quot;
-		  dhe &quot;&vendorShortName;&quot; ka mundësi që t'ju sjellin tërë faqet 
+		  dhe &quot;&vendorShortName;&quot; ka mundësi që t’ju sjellin tërë faqet 
 		  e kartelës së ndihmës.</li>
 	</ul>
 
