Hungarian SeaMonkey translation update

--- a/hu/suite/chrome/common/help/certs_help.xhtml
+++ b/hu/suite/chrome/common/help/certs_help.xhtml
@@ -233,7 +233,7 @@
   <li><strong>Jelszó megváltoztatása</strong>: a kijelölt adatvédelmi eszköz mesterjelszavának megváltoztatása.</li>
   <li><strong>Betöltés:</strong> megjelenik egy párbeszédpanel, amelyben megadható az új PKCS #11 modul neve és elérhetősége. Az új modul hozzáadása előtt telepítenünk kell a számítógépünkre a modul szoftverét, és ha szükséges, csatlakoztatnunk kell a megfelelő hardvereszközt. Kövessük a gyártó utasításait.</li>
   <li><strong>Eltávolítás:</strong> a kijelölt modul eltávolítása. Ha eltávolítunk egy modult, a modul és a hozzá tartozó adatvédelmi eszköz nem lesz többé elérhető a böngésző számára.</li>
-  <li><strong>FIPS engedélyezése:</strong> FIPS üzemmódot kapcsolja be vagy ki. További információk találhatóak erről a <a href="using_certs_help.xhtml#enable_fips_mode">FIPS üzemmód engedélyezése</a> fejezetben.</li>
+  <li><strong>FIPS engedélyezése:</strong> FIPS üzemmódot kapcsolja be vagy ki. További tudnivalók találhatóak erről a <a href="using_certs_help.xhtml#enable_fips_mode">FIPS üzemmód engedélyezése</a> fejezetben.</li>
 </ul>
 
 </body>
