--- a/hu/suite/chrome/common/help/glossary.xhtml
+++ b/hu/suite/chrome/common/help/glossary.xhtml
@@ -228,7 +228,7 @@
 
 <br /><dt id="web_page">Weboldal</dt><dd>A világháló darabja, olyan dokumentum, amelyet egyedi cím vagy URL határoz meg. Tartalmazhat szöveget, hiperhivatkozásokat és grafikát.</dd>
 
-<br /><dt id="XML">XML</dt><dd>Adatok leírására szolgáló nyílt szabvány. A HTML-lel ellentétben az XML lehetővé teszi egyéni elemek (tagek) definiálását. További információkért olvassuk el a W3C on-line dokumentumát az <a href="http://www.w3.org/XML/" target="_blank">XML</a>-ről.</dd>
+<br /><dt id="XML">XML</dt><dd>Adatok leírására szolgáló nyílt szabvány. A HTML-lel ellentétben az XML lehetővé teszi egyéni elemek (tagek) definiálását. További tudnivalókért olvassuk el a W3C on-line dokumentumát az <a href="http://www.w3.org/XML/" target="_blank">XML</a>-ről.</dd>
 
 <br /><dt id="XSLT">XSLT (Extensible Stylesheet Language Transformation)</dt><dd>Olyan nyelv, amely segítségével egy XML formátumú dokumentumot egy másik XML dokumentummá vagy más formátumú dokumentummá alakíthatunk.</dd>
 
