--- a/hu/suite/chrome/common/help/nav_help.xhtml
+++ b/hu/suite/chrome/common/help/nav_help.xhtml
@@ -341,7 +341,7 @@
 
 <p><strong>Tipp</strong>: a keresési eredmények következő vagy előző oldalát az Oldalsáv Keresés panellapjának alján a Következő és az Előző gombbal jeleníthetjük meg gyorsan.</p>
 
-<p>További információk: <a href="customize_help.xhtml#sidebar">Oldalsáv</a>.</p>
+<p>További tudnivalók: <a href="customize_help.xhtml#sidebar">Oldalsáv</a>.</p>
 
 <h3 id="searching_from_the_net_search_page">Keresés az Internetes keresés oldalról</h3>
 
