--- a/hu/suite/chrome/common/help/profiles_help.xhtml
+++ b/hu/suite/chrome/common/help/profiles_help.xhtml
@@ -142,7 +142,7 @@
 
 <p><strong>Megjegyzés</strong>: Amennyiben a lassú kapcsolatot használunk, legyünk tekintettel arra, hogy néhány fájl mérete igen nagy is lehet, amelynek komoly kihatása lehet a program indulási idejére is. A &brandShortName; letölti a helyi gépre az összes vándorló felhasználó profiljában tárolt adatot a program indulása előtt és a teljes profil információ feltöltésre kerül a kiszolgálóra, amikor kilépünk a &brandShortName; programból.</p>
 
-<p>A Vándorló felhasználók szerveroldali beállításaival kapcsolatos további információkat a következő on-line dokumentumokban találunk: <a href="http://www.klomp.org/mod_roaming/">mod_roaming - Vándorló felhasználók hozzáférése modul Apache webkiszolgálón (mod_roaming - Roaming Access
+<p>A Vándorló felhasználók szerveroldali beállításaival kapcsolatos további tudnivalókat a következő on-line dokumentumokban találunk: <a href="http://www.klomp.org/mod_roaming/">mod_roaming - Vándorló felhasználók hozzáférése modul Apache webkiszolgálón (mod_roaming - Roaming Access
   module for Apache)</a>,
   <a href="http://web.archive.org/web/20020207131101/http://help.netscape.com/products/client/communicator/manual_roaming2.html">A vándorló felhasználó hozzáférés kézi megvalósítása (Manually
   Implementing Roaming Access)</a>.</p>
