Update from Hungarian Aurora

--- a/hu/suite/chrome/common/help/cs_priv_prefs_popup.xhtml
+++ b/hu/suite/chrome/common/help/cs_priv_prefs_popup.xhtml
@@ -33,7 +33,7 @@
   <img src="chrome://navigator/skin/icons/popup-blocked.png" alt="Felugró ablakok kezelése"/> az állapotsorban. Ezt az ikont használhatjuk arra, hogy egy éppen látogatott weboldalt felvegyük a kivételek közé, így ezen oldalon ismét lehetővé tesszük a felbukkanó ablakok megjelenítését.</p>
 
 <p><strong>A felugrók tiltása néhány weboldal megjelenítését megzavarhatja</strong>: néhány weboldal, ideértve az on-line banki tranzakciókat lehetővé tevő oldalakat, felugró ablakokat használ néhány fontos funkcióhoz. 
-  Az összes felugró ablak tiltása működésképtelenné teszi ezen funkciókat. Ahhoz, hogy néhány kijelölt weboldalon működjenek a felugrók, míg az összes többi helyen tiltva legyenek, adjuk hozzá a kijelölt oldalakat az engedélyezett oldalak listájához. További tudnivalókért lásd a
+  Az összes felugró ablak tiltása működésképtelenné teszi ezen funkciókat. Ahhoz, hogy néhány kijelölt weboldalon működjenek a felugrók, míg az összes többi helyen tiltva legyenek, adjuk hozzá a kijelölt oldalakat az engedélyezett oldalak listájához. További információkért lásd a
   <a href="#privacy_and_security_preferences_popup_windows">Adatvédelem és
 biztonság - Felugró ablakok</a>.</p>
 
@@ -88,7 +88,7 @@ biztonság - Felugró ablakok</a>.</p>
 <p><strong>A felugró ablak ikon használata engedélyezett oldalak hozzáadásához</strong>: A felugró ablak ikont gyorsan használhatjuk arra, hogy hozzáadhassunk egy weboldat az engedélyezett webhelyek listájához. Kattintsunk a
   <img src="chrome://navigator/skin/icons/popup-blocked.png" alt="Felugró ablakok kezelése"/> ikonra, hogy megnyissuk az engedélyezett webhelyek listáját. Az aktuális webhely címe automatikusan beillesztődik. Kattintsunk a Hozzáadásra és utána az OK-ra, hogy engedélyezzük a hozzáadást.</p>
 
-<p><strong>Megjegyzés</strong>: A felugró ablakok blokkolása nem mindig használható, és zavarhat néhány weboldalt. További tudnivalókért a felugró ablakok blokkolásáról olvassa el a
+<p><strong>Megjegyzés</strong>: A felugró ablakok blokkolása nem mindig használható, és zavarhat néhány weboldalt. További információkért a felugró ablakok blokkolásáról olvassa el a
   <a href="#controlling_popups">A felugró ablakok kezelése</a> fejezetet.</p>
 
 </body>
