Translation for Hungarian SeaMonkey

--- a/hu/suite/chrome/common/help/cs_nav_prefs_advanced.xhtml
+++ b/hu/suite/chrome/common/help/cs_nav_prefs_advanced.xhtml
@@ -58,7 +58,7 @@
 <ul>
   <li><strong>Java engedélyezése</strong>: bejelölésével engedélyezzük, hogy a &brandShortName; értelmezze a Java-elemeket tartalmazó oldalakat. A Java nyelv segítségével a weboldalakon interaktív és multimédiás tartalom helyezhető el.</li>
   <li class="win"><strong>A &brandShortName; programot a memóriában tartja, hogy gyorsabban indulhasson</strong>: bejelölésekor gyorsabb lesz a &brandShortName;. Lásd
-    <q><a href="nav_help.xhtml#using_quick_launch">A Gyorsindító használata</a></q> a további információért.</li>
+    <q><a href="nav_help.xhtml#using_quick_launch">A Gyorsindító használata</a></q> a további tudnivalóért.</li>
   <li class="unix"><strong>Rendszerbeállítások használata</strong>: Válassza ki ezt a lehetőséget, ha azt szeretné, hogy a rendszerbeállítások felülbírálják a &brandShortName;&apos; beállításait.
 
     <p><strong>Megjegyzés</strong>: Ez az opció csak az XFT/GTK2 verzióban érhető el.</p>
@@ -214,7 +214,7 @@
       <li><strong>Soha</strong>: ezt akkor válasszuk, ha nem szeretnék, hogy a &brandShortName; a hálózaton ellenőrizze a gyorsítótárban lévő adatok frissességét.</li>
     </ul>
   </li>
-  <li><strong>Hivatkozások betöltése</strong>: választásakor az erre felkészített weblapok hivatkozásai a háttérben letöltődnek, és emiatt gyorsabban jelennek meg, ha rájuk kattintunk. További információ:
+  <li><strong>Hivatkozások betöltése</strong>: választásakor az erre felkészített weblapok hivatkozásai a háttérben letöltődnek, és emiatt gyorsabban jelennek meg, ha rájuk kattintunk. További tudnivaló:
     <a href="http://www.mozilla.org/projects/netlib/Link_Prefetching_FAQ.html">Link
     Prefetching FAQ</a>.</li>
 </ul>
