--- a/pl/suite/chrome/common/help/cert_dialog_help.xhtml
+++ b/pl/suite/chrome/common/help/cert_dialog_help.xhtml
@@ -116,7 +116,7 @@
 <ul>
   <li><strong>Podgląd certyfikatu</strong>: Ten przycisk należy nacisnąć, aby uzyskać podgląd certyfikatu identyfikującego organ certyfikacji, który żąda wykonania kopii klucza prywatnego.</li>
   <li><strong>OK</strong>: Jeżeli organ certyfikacji, który został zidentyfikowany przy pomocy jego certyfikatu, jest dla użytkownika zaufany, należy nacisnąć przycisk OK. Po naciśnięciu przycisku rozpocznie się proces tworzenia kopii klucza prywatnego.
-	
+
     <p>Przy niepewności co do zaufania organowi certyfikacji, który żąda utworzenia kopii klucza, należy zwrócić się o&nbsp;pomoc do administratora systemu.</p>
 	</li>
 	<li><strong>Anuluj</strong>: Jeżeli organ certyfikacji żądający wykonania kopii klucza prywatnego nie jest wystarczająco zaufany, nie należy żądać wydania przezeń certyfikatu. Naciśnięcie przycisku Anuluj spowoduje przerwanie zarówno procesu wykonywania kopii klucza prywatnego, jak i&nbsp;procesu tworzenia certyfikatu.</li>
@@ -193,73 +193,33 @@
   </ul>
 </div>
 
-<!-- TODO: start localizing -->
-<h3 id="secure_connection_failed_page">Secure Connection Failed Page</h3>
+<h3 id="secure_connection_failed_page">Nie udało się nawiązać bezpiecznego połączenia</h3>
 
-<p>In the case where you have disabled the SSL protocol (e.g. through
-  <a href="ssl_help.xhtml#ssl_settings">SSL Settings</a>) or the site that you
-  are accessing is using an older, insecure version of the SSL protocol then you
-  will be presented with a page titled &quot;Secure Connection Failed&quot;.
-  That page contains some basic background information (including the
-  <strong>Error code</strong> that uniquely identifies the type of problem
-  &brandShortName; detected with the site) and a <strong>Try Again</strong>
-  button that triggers a page reload.</p>
+<p>W przypadku, gdy wyłączono protokół SSL (np. poprzez <a href="ssl_help.xhtml#ssl_settings">Ustawienia SSL</a>) lub wczytywana strona używa starszej, niezabezpieczonej wersji protokołu SSL, wyświetli się strona zatytułowana &quot;Nie udało się nawiązać bezpiecznego połączenia&quot;. Strona ta zawiera podstawowe informacje (włączając <strong>Kod błędu</strong>, który identyfikuje rodzaj problemu wykrytego przez program &brandShortName; w związku z otwieraną stroną) oraz przycisk <strong>Spróbuj ponownie</strong> służący do ponownego wczytania strony.</p>
 
-<h3 id="untrusted_connection_page">Untrusted Connection Page</h3>
+<h3 id="untrusted_connection_page">Niezaufane połączenie</h3>
 
-<p>If SSL itself is enabled then the error page that you will be presented with
-  will be titled &quot;This Connection is Untrusted&quot;. There are many
-  different reasons why a connection can appear untrusted. Here are some of the
-  most common ones:</p>
+<p>Jeśli włączono protokół SSL, wyświetlona strona błędu będzie nosiła tytuł &quot;To połączenie nie jest zaufane&quot;. Istnieje wiele różnych powodów, dla których połączenie może wyglądać na niezaufane. Poniżej prezentujemy te najczęściej spotykane:</p>
 
 <ul>
-  <li>the certificate of the website is <a href="#certificate_expired">no longer
-    valid (expired)</a></li>
-  <li>the certificate of the website is
-    <a href="#certificate_not_yet_valid">not yet valid</a></li>
-  <li>the certificate of the website is only valid for another site
-    (<a href="#domain_name_mismatch">domain name mismatch</a>)</li>
-  <li>the certificate of the website is self-signed (thus the identity of the
-    website cannot be verified).</li>
-  <li>the issuer certificate is not trusted (&brandShortName; cannot
-    verify the identity of the website because it doesn&apos;t
-    recognize the <a href="glossary.xhtml#certificate_authority">certificate
-    authority (CA)</a> that issued the website&apos;s certificate)</li>
+  <li>certyfikat witryny <a href="#certificate_expired">stracił ważność (wygasł)</a></li>
+  <li>certyfikat witryny <a href="#certificate_not_yet_valid">nie jest jeszcze ważny</a></li>
+  <li>certyfikat danej witryny jest ważny tylko dla innej strony (<a href="#domain_name_mismatch">niezgodność nazw domen</a>)</li>
+  <li>certyfikat witryny nie pochodzi z zaufanego źródła (przez co nie można zweryfikować tożsamości strony).</li>
+  <li>wydawca certyfikatu nie jest zaufany (program &brandShortName; nie może zweryfikować tożsamości witryny, ponieważ nie jest w stanie rozpoznać <a href="glossary.xhtml#certificate_authority">urzędu certyfikacji (CA)</a>, który wydał certifikat)</li>
 </ul>
 
-<p>The page displayed in the above cases is meant to help you understand why
-  &brandShortName; was unable to establish a secure connection to the website.
-  It starts by telling you that the site&apos;s identity could not be verified,
-  then offers you to leave the page by clicking the <strong>This sounds bad,
-  take me to my home page instead</strong> button. If you are unsure what to do
-  it is recommended that you follow this advice.</p>
+<p>Strona wyświetlona w powyższych przypadkach ma na celu wyjaśnić, dlaczego program &brandShortName; nie mógł ustanowić bezpiecznego połączenia z żądaną stroną internetową. Na początku podaje informację, że nie można zweryfikować tożsamości strony, a następnie proponuje opuszczenie strony poprzez klilknięcie przycisku <strong>To brzmi nieciekawie. Zabierz mnie stąd!</strong>. W przypadku wątpliwości, zaleca się skorzystanie z tej porady.</p>
 
-<p>If you want to know a little bit more about the actual problem at hand you
-  may expand the corresponding section by clicking the chevron in front of
-  <strong>Technical Details</strong>. That section also contains the
-  <strong>Error code</strong> that uniquely identifies the type of problem
-  &brandShortName; detected with the site.</p>
+<p>Więcej informacji na temat zaistniałego problemu można uzyskać, klikając strzałki znajdujące się naprzeciw nagłówka <strong>Szczegóły techniczne</strong>. Sekcja ta zawiera również <strong>Kod błędu</strong>, który identyfikuje rodzaj problemu wykrytego przez program &brandShortName; w związku z żądaną stroną.</p>
 
-<h4 id="add_security_exception">Adding a Security Exception</h4>
+<h4 id="add_security_exception">Dodawanie wyjątku bezpieczeństwa</h4>
 
-<p>The <strong>I Understand the Risks</strong> section of the Untrusted
-  Connection page allows you to tell &brandShortName; to explicitly override the
-  security checks for this site by adding an exception. If you expand the
-  section by clicking the chevron in front of it you will see an <strong>Add
-  Exception</strong> button that will take you to a dialog allowing you to get
-  and view the website&apos;s certificate and optionally add a Security
-  Exception for it (either permanently or just for the current session). Those
-  exceptions can be administered through the Certificate Manager&apos;s
-  <a href="certs_help.xhtml#servers">Servers</a> tab.</p>
+<p>Sekcja <strong>Rozumiem ryzyko</strong> strony informującej o niezaufanym połączeniu umożliwia wydanie polecenia programowi &brandShortName;, aby zupełnie ignorował kontrole bezpieczeństwa, dodając wyjątek. Po rozwinięciu sekcji poprzez kliknięcie znajdujących się naprzeciw niej strzałek pojawi się przycisk <strong>Dodaj wyjątek</strong>, po kliknięciu którego wyświetli się okno dialogowe pozwalające na uzyskanie i przeglądanie certyfikatu witryny oraz, opcjonalnie, na dodanie dla niej Wyjątku bezpieczeństwa (na stałe albo tylko dla bieżącej sesji). Można zarządzać tymi wyjątkami, wchodząc do karty <a href="certs_help.xhtml#servers">Serwery</a> w Menedżerze certyfikatów.</p>
 
-<h3 id="secure_connection_failed_dialog">Secure Connection Failed Dialog</h3>
+<h3 id="secure_connection_failed_dialog">Okno dialogowe: Nie udało się nawiązać bezpiecznego połączenia</h3>
 
-<p>In cases where &brandShortName; cannot determine the actual cause of the
-  problem a dialog titled &quot;Secure Connection Failed&quot; is shown in
-  addition to the <a href="#untrusted_connection_page">Untrusted Connection
-  page</a>. That dialog includes a <strong>View Certificate</strong> button
-  that allows you to examine the website&apos;s certificate more closely.</p>
-<!-- TODO: stop localizing -->
+<p>W przypadu, gdy program &brandShortName; nie może określić rzeczywistego powodu problemu, oprócz strony <a href="#untrusted_connection_page">Niezaufane połączenie</a> wyświetli się okno dialogowe zatytułowane &quot;Nie udało się nawiązać bezpiecznego połączenia&quot;. Okno to zawiera przycisk <strong>Wyświetl certyfikat</strong>, który pozwala na dokładniejsze przeanalizowanie certyfikatu witryny.</p>
 
 <h3 id="certificate_expired">Wygasły certyfikat</h3>
 
@@ -267,7 +227,7 @@
 
 <p>Program &brandShortName; <a href="#untrusted_connection_page">ostrzega</a> użytkownika przed próbą dostępu do witryny WWW, której certyfikat wygasł. Pierwszą rzeczą, jaką powinien w&nbsp;związku z&nbsp;takim komunikatem zrobić użytkownik jest sprawdzenie poprawności daty i&nbsp;czasu w&nbsp;swoim komputerze. Jeżeli zegar komputera jest ustawiony na datę późniejszą niż data wygaśnięcia certyfikatu, program &brandShortName; będzie traktować certyfikat jako wygasły.</p>
 
-<p>Jeżeli zegar komputera jest ustawiony poprawnie, do użytkownika należy decyzja o&nbsp;zaufaniu okazanym danej witrynie. Taka decyzja może zależeć od tego, jakie czynności chce się wykonywać na witrynie, czy też, czy witryna jest użytkownikowi znana i&nbsp;zaufana. Większość stron komercyjnych uaktualnia swoje certyfikaty przed ich wygaśnięciem. <!-- TODO: start localizing -->If you choose to continue you need to <a href="#add_security_exception">add a security exception</a>.<!-- TODO: stop localizing --></p>
+<p>Jeżeli zegar komputera jest ustawiony poprawnie, do użytkownika należy decyzja o&nbsp;zaufaniu okazanym danej witrynie. Taka decyzja może zależeć od tego, jakie czynności chce się wykonywać na witrynie, czy też, czy witryna jest użytkownikowi znana i&nbsp;zaufana. Większość stron komercyjnych uaktualnia swoje certyfikaty przed ich wygaśnięciem. Aby kontynuować, należy <a href="#add_security_exception">dodać wyjątek bezpieczeństwa</a>.</p>
 
 <h3 id="certificate_not_yet_valid">Jeszcze nieważny certyfikat</h3>
 
@@ -275,13 +235,13 @@
 
 <p>Program &brandShortName; <a href="#untrusted_connection_page">ostrzega</a> użytkownika przed próbą dostępu do witryny WWW, której certyfikat jest jeszcze nieważny. Pierwszą rzeczą, jaką powinien w&nbsp;związku z&nbsp;takim komunikatem zrobić użytkownik jest sprawdzenie poprawności daty i&nbsp;czasu w&nbsp;swoim komputerze. Jeżeli zegar komputera jest ustawiony na niewłaściwą datę, program &brandShortName; może traktować certyfikat jako jeszcze nieważny, nawet jeśli tak nie jest w&nbsp;danym konkretnym przypadku.</p>
 
-<p>Jeżeli zegar komputera jest ustawiony poprawnie, do użytkownika należy decyzja o&nbsp;zaufaniu okazanym danej witrynie. Taka decyzja może zależeć od tego, jakie czynności chce się wykonywać na witrynie, czy też, czy witryna jest użytkownikowi znana i&nbsp;zaufana. Większość stron komercyjnych nie udostępnia swoich certyfikatów z&nbsp;datą początku ważności wybiegającą w&nbsp;przyszłość. <!-- TODO: start localizing -->If you choose to continue you need to <a href="#add_security_exception">add a security exception</a>.<!-- TODO: stop localizing --></p>
+<p>Jeżeli zegar komputera jest ustawiony poprawnie, do użytkownika należy decyzja o&nbsp;zaufaniu okazanym danej witrynie. Taka decyzja może zależeć od tego, jakie czynności chce się wykonywać na witrynie, czy też, czy witryna jest użytkownikowi znana i&nbsp;zaufana. Większość stron komercyjnych nie udostępnia swoich certyfikatów z&nbsp;datą początku ważności wybiegającą w&nbsp;przyszłość. Aby kontynuować, należy <a href="#add_security_exception">dodać wyjątek bezpieczeństwa</a>.</p>
 
 <h3 id="domain_name_mismatch">Niezgodność nazw domen</h3>
 
 <p><a href="glossary.xhtml#certificate">Certyfikat</a> serwera zawiera nazwę serwera w&nbsp;postaci nazwy domeny witryny. Przykładowo, nazwą domeny witryny WWW&nbsp;organizacji Mozilla jest <tt>www.mozilla.org</tt>. Jeżeli nazwa domeny w&nbsp;certyfikacie serwera nie jest zgodna z&nbsp;aktualną nazwą domeny witryny WWW, może to oznaczać, że ktoś próbuje przechwycić komunikację użytkownika z&nbsp;witryną WWW.</p>
 
-<!-- TODO: start localizing --><p>&brandShortName; <a href="#untrusted_connection_page">warns</a> you when you attempt to visit a website whose server certificate&apos;s domain does not match the domain of the website you are trying to visit.<!-- TODO: stop localizing --> Decyzja, czy mimo ostrzeżenia można traktować witrynę jako zaufaną należy do użytkownika i&nbsp;może zależeć od tego, jakie czynności chce on wykonywać na niej i&nbsp;czy jest ona znana użytkownikowi. Certyfikaty większości stron komercyjnych posiadają taką samą nazwę domeny w&nbsp;certyfikacie, jaka widnieje w&nbsp;pasku adresu przeglądarki. <!-- TODO: start localizing -->If you choose to continue you need to <a href="#add_security_exception">add a security exception</a>.<!-- TODO: stop localizing --></p>
+<p>Program &brandShortName; <a href="#untrusted_connection_page">ostrzega</a> przed każdą próbą otworzenia witryny znajdującej się na serwerze, którego domena certyfikatu nie jest zgodna z domeną odwiedzanej strony internetowej. Decyzja, czy mimo ostrzeżenia można traktować witrynę jako zaufaną należy do użytkownika i&nbsp;może zależeć od tego, jakie czynności chce on wykonywać na niej i&nbsp;czy jest ona znana użytkownikowi. Certyfikaty większości stron komercyjnych posiadają taką samą nazwę domeny w&nbsp;certyfikacie, jaka widnieje w&nbsp;pasku adresu przeglądarki. Aby kontynuować, należy <a href="#add_security_exception">dodać wyjątek bezpieczeństwa</a>.</p>
 
 <p>Jeżeli użytkownik zdecyduje mimo wszystko zaakceptować certyfikat (obojętne, czy na czas bieżącej sesji, czy na zawsze), powinien być ostrożny w&nbsp;wykonywaniu czynności w&nbsp;witrynie i&nbsp;powinien traktować wszelkie informacje na niej jako potencjalnie podejrzane.</p>
 
