--- a/pt-BR/suite/chrome/common/help/mailnews_security.xhtml
+++ b/pt-BR/suite/chrome/common/help/mailnews_security.xhtml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"[
@@ -60,7 +64,8 @@
     <a href="using_certs_help.xhtml#getting_your_own_certificate">Getting Your
     Own Certificate</a>.</li>
   <li>Configure the security settings for your email account. For details, see
-    <a href="mail_help.xhtml#security">Configuring Your Security Settings</a>.
+    <a href="mailnews_account_settings.xhtml#security">Configuring Your
+    Security Settings</a>.
   </li>
 </ol>
 
@@ -71,7 +76,7 @@
 <p>The sections that follow provide a brief overview of how digital signatures
   and encryption work. For more technical details on this subject, see the
   online document
-  <a href="http://developer.mozilla.org/en/docs/Introduction_to_Public-Key_Cryptography">Introduction
+  <a href="http://developer.mozilla.org/en/Introduction_to_Public-Key_Cryptography">Introduction
   to Public-Key Cryptography</a>.</p>
 
 <h3 id="how_digital_signatures_work">How Digital Signatures Work</h3>
@@ -144,11 +149,12 @@
   such as the <q>phonebook</q> directories maintained by many companies.</p>
 
 <p>It&apos;s also possible to look up certificates automatically.  This feature
-  is controlled by <a href="mail_help.xhtml#addressing_preferences">Mail &amp;
+  is controlled by
+  <a href="mailnews_preferences.xhtml#addressing_preferences">Mail &amp;
   Newsgroups Preferences - Addressing</a> or
-  <a href="mail_help.xhtml#addressing">Mail &amp; Newsgroups Account Settings -
-  Addressing</a>, which can be configured to look up recipients&apos; email
-  addresses in a directory.</p>
+  <a href="mailnews_account_settings.xhtml#addressing">Mail &amp; Newsgroups
+  Account Settings - Addressing</a>, which can be configured to look up
+  recipients&apos; email addresses in a directory.</p>
 
 <p>When you are using any account that is configured to look up addresses in a
   directory, the same directory will be searched for matching certificates when
@@ -242,9 +248,10 @@
   <a href="#about_digital_signatures_and_encryption">About Digital Signatures
   &amp; Encryption</a>.</p>
 
-<p>The settings specified in <a href="mail_help.xhtml#security">Mail &amp;
-  Newsgroups Account Settings - Security</a> determine the default settings for
-  each new Compose window you open when you set out to write an email.</p>
+<p>The settings specified in
+  <a href="mailnews_account_settings.xhtml#security">Mail &amp; Newsgroups
+  Account Settings - Security</a> determine the default settings for each new
+  Compose window you open when you set out to write an email.</p>
 
 <p>To open a Compose window, start from the Mail window and click Compose. You
   can immediately identify the default security settings from the presence or
@@ -373,6 +380,10 @@
   </li>
 </ul>
 
+<p>When you compose a message and select a different account, the signing
+  and encryption preferences are updated to reflect the settings of
+  the newly selected account.</p>
+
 <p>The Message Security window also lists the certificates available for the
   recipients of your message:</p>
 
@@ -390,8 +401,8 @@
   the options you want.</p>
 
 <p>To indicate your default signing and encryption preferences for all
-  messages, see <a href="mail_help.xhtml#security">Mail &amp; Newsgroups
-  Account Settings - Security</a></p>
+  messages, see <a href="mailnews_account_settings.xhtml#security">Mail &amp;
+  Newsgroups Account Settings - Security</a></p>
 
 <p>[<a href="#signing_and_encrypting_messages">Return to beginning of
   section</a>]</p>
@@ -416,8 +427,8 @@
     message is digitally signed and if so, whether the signature is valid.</li>
   
   <p>If validation failed while OCSP was enabled, check the OCSP settings in
-    <a href="validation_help.xhtml#privacy_and_security_preferences_validation">Privacy
-    &amp; Security Preferences - Validation</a>. If you are not familiar with
+    <a href="certs_prefs_help.xhtml#privacy_and_security_preferences_certificates">Privacy
+    &amp; Security Preferences - Certificates</a>. If you are not familiar with
     OCSP, confirm the settings with your system administrator. If your settings
     are correct, there may be a problem with the OCSP service or the
     certificate used to create the signature is no longer valid.</p>
@@ -447,8 +458,6 @@
 
 <p>[<a href="#signing_and_encrypting_messages">Return to beginning of
   section</a>]</p>
-
-<p>&copyright.string;</p>
 
 </body>
 </html>
