--- a/pt-BR/suite/chrome/common/help/shortcuts_composer.xhtml
+++ b/pt-BR/suite/chrome/common/help/shortcuts_composer.xhtml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd" [
@@ -31,14 +35,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>New Composer Page</td>
     <td>Ctrl+Shift+N</td>
     <td>Cmd+Shift+N</td>
     <td>Ctrl+Shift+N</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Save Page</td>
     <td>Ctrl+S</td>
     <td>Cmd+S</td>
@@ -50,7 +54,7 @@
     <td>Cmd+O</td>
     <td>Ctrl+O</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Close Page</td>
     <td>Ctrl+W</td>
     <td>Cmd+W</td>
@@ -62,11 +66,11 @@
     <td>Cmd+Shift+S</td>
     <td>Ctrl+Shift+S</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Find and Replace</td>
-    <td>Ctrl+F</td>
-    <td>Cmd+F</td>
-    <td>Ctrl+F</td>
+    <td>Ctrl+H</td>
+    <td>Cmd+Opt+F</td>
+    <td>Ctrl+H</td>
   </tr>
   <tr>
     <td>Find Again</td>
@@ -74,7 +78,7 @@
     <td>Cmd+G</td>
     <td>Ctrl+G</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Find Previous</td>
     <td>Ctrl+Shift+G</td>
     <td>Cmd+Shift+G</td>
@@ -86,7 +90,7 @@
     <td>Cmd+K</td>
     <td>Ctrl+Shift+K</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Insert/Edit Link</td>
     <td>Ctrl+L</td>
     <td>Cmd+L</td>
@@ -98,7 +102,7 @@
     <td>Cmd+[</td>
     <td>Ctrl+[</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Decrease Indent</td>
     <td>Ctrl+]</td>
     <td>Cmd+]</td>
@@ -106,11 +110,11 @@
   </tr>
   <tr>
     <td>Discontinue Text Styles</td>
-    <td>Ctrl+Shift+T</td>
-    <td>Cmd+Shift+T</td>
-    <td>Ctrl+Shift+T</td>
+    <td>Ctrl+Shift+Y</td>
+    <td>Cmd+Shift+Y</td>
+    <td>Ctrl+Shift+Y</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Discontinue Link</td>
     <td>Ctrl+Shift+K</td>
     <td>Cmd+Shift+K</td>
@@ -122,7 +126,7 @@
     <td>Cmd+Shift+A</td>
     <td>Ctrl+Shift+A</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Select Row/Column</td>
     <td>Ctrl+Drag</td>
     <td>Cmd+Drag</td>
@@ -137,7 +141,7 @@
     <td>Ctrl+Click (drag to select block of cells, or continue clicking
       to select individual cells)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Decrease Font Size</td>
     <td>Ctrl+- (minus sign)</td>
     <td>Cmd+- (minus sign)</td>
@@ -149,7 +153,7 @@
     <td>Cmd++ (plus sign)</td>
     <td>Ctrl++ (plus sign)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Text Style Bold</td>
     <td>Ctrl+B</td>
     <td>Cmd+B</td>
@@ -161,7 +165,7 @@
     <td>Cmd+I</td>
     <td>Ctrl+I</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Text Style Underline</td>
     <td>Ctrl+U</td>
     <td>Cmd+U</td>
@@ -175,8 +179,6 @@
   </tr>
 </tbody>
 </table>
-
-<p>&copyright.string;</p>
 
 </body>
 </html>
