--- a/pt-BR/suite/chrome/common/help/shortcuts_mailnews.xhtml
+++ b/pt-BR/suite/chrome/common/help/shortcuts_mailnews.xhtml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd" [
@@ -43,7 +47,13 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
+  <tr>
+    <td>Reload</td>
+    <td>F5</td>
+    <td/>
+    <td>F5</td>
+  </tr>
   <tr>
     <td>Move to Next Mail Pane (Folder, QuickSearch, Thread,
     Message Panes)</td>
@@ -51,7 +61,7 @@
     <td>F6</td>
     <td>F6</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Toggle Message Pane Visibility</td>
     <td>F8</td>
     <td>F8</td>
@@ -60,10 +70,10 @@
   <tr>
     <td>Toggle Folder Pane Visibility</td>
     <td>F9</td>
-    <td/>
+    <td>Cmd+Opt+S</td>
     <td>F9</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>New Message</td>
     <td>Ctrl+M</td>
     <td>Cmd+Shift+M</td>
@@ -71,15 +81,15 @@
   </tr>
   <tr>
     <td>Get New Messages</td>
-    <td>Ctrl+T</td>
-    <td>Cmd+T</td>
-    <td>Ctrl+T</td>
+    <td>Ctrl+D</td>
+    <td>Cmd+D</td>
+    <td>Ctrl+D</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Get All New Messages</td>
-    <td>Ctrl+Shift+T</td>
-    <td>Cmd+Shift+T</td>
-    <td>Ctrl+Shift+T</td>
+    <td>Ctrl+Shift+D</td>
+    <td>Cmd+Shift+D</td>
+    <td>Ctrl+Shift+D</td>
   </tr>
   <tr>
     <td>Search Messages</td>
@@ -107,14 +117,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Save Message as File</td>
     <td>Ctrl+S</td>
     <td>Cmd+S</td>
     <td>Ctrl+S</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Open Message (in a new window)</td>
     <td>Ctrl+O</td>
     <td>Cmd+O</td>
@@ -126,7 +136,7 @@
     <td>Del</td>
     <td>Del</td>
   </tr>
- <tr class="even">
+ <tr>
     <td>Delete Message Immediately (without placing it in the Trash
     folder)</td>
     <td>Shift+Del</td>
@@ -139,7 +149,7 @@
     <td>Cmd+Z</td>
     <td>Ctrl+Z</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Select All Messages</td>
     <td>Ctrl+A</td>
     <td>Cmd+A</td>
@@ -147,11 +157,11 @@
   </tr>
   <tr>
     <td>Select Thread</td>
-    <td>Ctrl+Shift+A</td>
-    <td>Cmd+Shift+A</td>
+    <td>Alt+Shift+A</td>
+    <td>Alt+Shift+A</td>
     <td>Alt+Shift+A</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Collapse All Threads</td>
     <td>\ (backslash key)</td>
     <td>\ (backslash key)</td>
@@ -163,7 +173,7 @@
     <td>* (asterisk key)</td>
     <td>* (asterisk key)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Message Source</td>
     <td>Ctrl+U</td>
     <td>Cmd+U</td>
@@ -175,7 +185,7 @@
     <td>F</td>
     <td>F</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Go to Next Unread Message</td>
     <td>N</td>
     <td>N</td>
@@ -187,7 +197,7 @@
     <td>T</td>
     <td>T</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Go to Previous Message</td>
     <td>B</td>
     <td>B</td>
@@ -199,7 +209,7 @@
     <td>P</td>
     <td>P</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Reply to Message (replies only to sender)</td>
     <td>Ctrl+R</td>
     <td>Cmd+R</td>
@@ -212,7 +222,7 @@
    <td>Cmd+Shift+R</td>
    <td>Ctrl+Shift+R</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Forward Message</td>
     <td>Ctrl+L</td>
     <td>Cmd+L</td>
@@ -225,7 +235,7 @@
     <td>Cmd+E</td>
     <td>Ctrl+E</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Remove Message Label</td>
     <td>0</td>
     <td>0</td>
@@ -237,7 +247,7 @@
     <td>1, 2, 3, 4 and 5</td>
     <td>1, 2, 3, 4 and 5</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Mark Message As Read</td>
     <td>M</td>
     <td>M</td>
@@ -249,7 +259,7 @@
     <td>R</td>
     <td>R</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Mark Thread As Read and Move to Next Unread Message</td>
     <td>T</td>
     <td>T</td>
@@ -261,11 +271,11 @@
     <td>C</td>
     <td>C</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Mark All Messages in Selected Folder As Read</td>
     <td>Ctrl+Shift+C</td>
     <td>Cmd+Shift+C</td>
-    <td>Ctrl+Shift+M</td>
+    <td>Ctrl+Shift+C</td>
   </tr>
   <tr>
     <td>Flag Message</td>
@@ -273,7 +283,7 @@
     <td>I</td>
     <td>I</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Mark Message As Junk</td>
     <td>J</td>
     <td>J</td>
@@ -285,7 +295,7 @@
     <td>Shift+J</td>
     <td>Shift+J</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Mark Message As Not Scam</td>
     <td>Shift+P</td>
     <td>Shift+P</td>
@@ -311,14 +321,32 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Paste As Quotation</td>
+    <td>Ctrl+Shift+O</td>
+    <td>Cmd+Shift+O</td>
+    <td>Ctrl+Shift+O</td>
+  </tr>
+  <tr>
+    <td>Paste Without Formatting</td>
     <td>Ctrl+Shift+V</td>
     <td>Cmd+Shift+V</td>
     <td>Ctrl+Shift+V</td>
   </tr>
-  <tr class="even">
+  <tr>
+    <td>Rewrap</td>
+    <td>Ctrl+R</td>
+    <td>Cmd+R</td>
+    <td>Ctrl+R</td>
+  </tr>
+  <tr>
+    <td>Find and Replace</td>
+    <td>Ctrl+H</td>
+    <td>Cmd+Opt+F</td>
+    <td>Ctrl+H</td>
+  </tr>
+  <tr>
     <td>Send Message Now</td>
     <td>Ctrl+Enter</td>
     <td>Cmd+Return</td>
@@ -332,8 +360,6 @@
   </tr>
 </tbody>
 </table>
-
-<p>&copyright.string;</p>
 
 </body>
 </html>
