--- a/pt-BR/suite/chrome/common/help/shortcuts_navigator.xhtml
+++ b/pt-BR/suite/chrome/common/help/shortcuts_navigator.xhtml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd" [
@@ -44,14 +48,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Open Manage Bookmarks Window </td>
     <td>Ctrl+B</td>
     <td>Cmd+B</td>
     <td>Ctrl+B</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Add Page to Bookmarks</td>
     <td>Ctrl+Shift+D</td>
     <td>Cmd+Shift+D</td>
@@ -63,7 +67,7 @@
     <td>Cmd+D</td>
     <td>Ctrl+D</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Sort Bookmarks Folder (selected folder in Manage Bookmarks window)
     </td>
     <td>Ctrl+S</td>
@@ -78,7 +82,7 @@
     <td>Cmd+N</td>
     <td>Ctrl+N</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Bookmark Properties (for selected bookmark in Manage Bookmarks window)
     </td>
     <td>Ctrl+I</td>
@@ -105,14 +109,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Open History Window</td>
     <td>Ctrl+H</td>
     <td>Cmd+Shift+H</td>
     <td>Ctrl+H</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Reload</td>
     <td>Ctrl+R</td>
     <td>Cmd+R</td>
@@ -124,7 +128,7 @@
     <td>Cmd+Shift+R</td>
     <td>Ctrl+Shift+R</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Back</td>
     <td>Alt+Left Arrow or Backspace</td>
     <td>Cmd+Left Arrow, Cmd+[ or Delete (Backspace)</td>
@@ -136,7 +140,7 @@
     <td>Cmd+Right Arrow, Cmd+] or Shift+Delete (Backspace)</td>
     <td>Alt+Right Arrow or Ctrl+]</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Up</td>
     <td>Alt+Up Arrow</td>
     <td>Opt+Up Arrow</td>
@@ -148,7 +152,7 @@
     <td>Cmd+. or Esc</td>
     <td>Esc</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Home</td>
     <td>Alt+Home</td>
     <td>Cmd+Home</td>
@@ -160,7 +164,7 @@
     <td></td>
     <td>End</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Go to Top of Page</td>
     <td>Home</td>
     <td>Home</td>
@@ -172,7 +176,7 @@
     <td>Cmd+L</td>
     <td>Ctrl+L or Alt+D</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Open Web Page Location</td>
     <td>Ctrl+Shift+L</td>
     <td>Cmd+Shift+L</td>
@@ -184,7 +188,7 @@
     <td>Return</td>
     <td>Enter</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Open search engine page</td>
     <td>Ctrl+Shift+S</td>
     <td>Cmd+Shift+S</td>
@@ -196,7 +200,7 @@
     <td>Ctrl+Tab or F6 (if F6 is not programmed for another command)</td>
     <td>F6</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Move to Previous Frame (in web pages using frames)</td>
     <td>Shift+F6</td>
     <td>Ctrl+Shift+Tab or Shift+F6 (if F6 is not programmed for
@@ -209,7 +213,13 @@
     <td>Cmd+N</td>
     <td>Ctrl+N</td>
   </tr>
-  <tr class="even">
+  <tr>
+    <td>New Private Window</td>
+    <td>Ctrl+Shift+B</td>
+    <td>Cmd+Shift+B</td>
+    <td>Ctrl+Shift+B</td>
+  </tr>
+  <tr>
     <td>Move to Next/Previous Link or Form Element in a Web Page</td>
     <td>Tab/Shift+Tab</td>
     <td>Tab/Shift+Tab</td>
@@ -221,7 +231,7 @@
     <td>Cmd+O</td>
     <td>Ctrl+O</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Close Window</td>
     <td>Ctrl+W</td>
     <td>Cmd+W</td>
@@ -233,7 +243,7 @@
     <td>Cmd+Shift+W</td>
     <td>Ctrl+Shift+W</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Save Page As</td>
     <td>Ctrl+S</td>
     <td>Cmd+S</td>
@@ -245,7 +255,7 @@
     <td>Opt+Return</td>
     <td>Shift+Enter</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Edit Page</td>
     <td>Ctrl+E</td>
     <td>Cmd+E</td>
@@ -257,7 +267,7 @@
     <td>Cmd+P</td>
     <td>Ctrl+P</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Go Up One Page</td>
     <td>Page Up or Shift+Space</td>
     <td>Page Up or Shift+Space</td>
@@ -269,7 +279,7 @@
     <td>Page Down or Space</td>
     <td>Page Down, Space or Shift+Backspace</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Go Up One Line</td>
     <td>Up Arrow</td>
     <td>Up Arrow</td>
@@ -280,12 +290,6 @@
     <td>Down Arrow</td>
     <td>Down Arrow</td>
     <td>Down Arrow</td>
-  </tr>
-  <tr class="even">
-    <td>Turn on/off Caret Mode</td>
-    <td>F7</td>
-    <td>F7 (if F7 is not programmed for another command)</td>
-    <td>F7</td>
   </tr>
 </tbody>
 </table>
@@ -307,14 +311,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Full Screen (toggle)</td>
     <td>F11</td>
-    <td></td>
+    <td>Cmd+Shift+F</td>
     <td>F11 (may depend on window manager)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Zoom Text Smaller</td>
     <td>Ctrl+- (minus sign)</td>
     <td>Cmd+- (minus sign)</td>
@@ -326,7 +330,7 @@
     <td>Cmd++ (plus sign)</td>
     <td>Ctrl++ (plus sign)</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>No zoom (100%)</td>
     <td>Ctrl+0</td>
     <td>Cmd+0</td>
@@ -338,7 +342,7 @@
     <td>Cmd+I</td>
     <td>Ctrl+I</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>View Page Source</td>
     <td>Ctrl+U</td>
     <td>Cmd+U</td>
@@ -364,14 +368,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>New Browser Tab</td>
     <td>Ctrl+T</td>
     <td>Cmd+T</td>
     <td>Ctrl+T</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Switch to Next Tab (when using Tabbed Browsing with more than one
     tab)</td>
     <td>Ctrl+Tab or Ctrl+Page Down</td>
@@ -386,7 +390,7 @@
     <td>Cmd+Opt+Left Arrow or Ctrl+Page Up</td>
     <td>Ctrl+Page Up</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Close Tab (Close window if one page open)</td>
     <td>Ctrl+W</td>
     <td>Cmd+W</td>
@@ -398,7 +402,7 @@
     <td>Cmd+Left Arrow or Cmd+Up Arrow</td>
     <td>Ctrl+Left Arrow or Ctrl+Up Arrow</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Move Tab Right (when tab is focused)</td>
     <td>Ctrl+Right Arrow or Ctrl+Down Arrow</td>
     <td>Cmd+Right Arrow or Cmd+Down Arrow</td>
@@ -410,7 +414,7 @@
     <td>Cmd+Home</td>
     <td>Ctrl+Home</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Move Tab to End (when tab is focused)</td>
     <td>Ctrl+End</td>
     <td>Cmd+End</td>
@@ -418,15 +422,15 @@
   </tr>
   <tr>
     <td>Open Link in a New Foreground Tab (when link is focused)</td>
-    <td>Insert (or Shift+Insert) *</td>
-    <td></td>
-    <td>Insert (or Shift+Insert) *</td>
+    <td>Insert (or Alt+Insert) *</td>
+    <td>(Alt+Insert) *</td>
+    <td>Insert (or Alt+Insert) *</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Open Link in a New Background Tab (when link is focused)</td>
-    <td>Shift+Insert (or Insert) *</td>
-    <td></td>
-    <td>Shift+Insert (or Insert) *</td>
+    <td>Alt+Insert (or Insert) *</td>
+    <td>Alt+Insert</td>
+    <td>Alt+Insert (or Insert) *</td>
   </tr>
 </tbody>
 </table>
@@ -454,14 +458,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
     <td>Open/Close Sidebar (toggle)</td>
     <td>F9</td>
-    <td/>
+    <td>Cmd+Opt+S</td>
     <td>F9</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Switch to Next Sidebar Panel</td>
     <td>Alt+Page Down</td>
     <td>Opt+Page Down</td>
@@ -493,14 +497,14 @@
     <th>Linux or Unix</th>
   </tr>
 </thead>
-<tbody>
+<tbody class="tbody-default">
   <tr>
-    <td> Move to Next/Previous Item in Form</td>
+    <td>Move to Next/Previous Item in Form</td>
     <td>Tab/Shift+Tab</td>
     <td>Tab/Shift+Tab</td>
     <td>Tab/Shift+Tab</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Submit Form</td>
     <td>Enter</td>
     <td>Return</td>
@@ -512,7 +516,7 @@
     <td>Space</td>
     <td>Space</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Select an Item from a List</td>
     <td>Up Arrow, Down Arrow or First Letter of Item Name</td>
     <td>Up Arrow, Down Arrow or First Letter of Item Name</td>
@@ -524,7 +528,7 @@
     <td>Space</td>
     <td>Space</td>
   </tr>
-  <tr class="even">
+  <tr>
     <td>Open a Drop-Down Menu</td>
     <td>Alt+Down Arrow</td>
     <td>Opt+Down Arrow</td>
@@ -532,8 +536,6 @@
   </tr>
 </tbody>
 </table>
-
-<p>&copyright.string;</p>
 
 </body>
 </html>
